# nohead-rs

./: .dockerignore  .env  .env.test  .gitignore  .sqruff  Cargo.toml  Dockerfile  README.md  fly.toml  litefs.yml  nohead_rs.db  nohead_rs.db-shm  nohead_rs.db-wal  rustc-ice-2025-02-08T07_55_29-14981.txt
.cargo/: config.toml
.sqlx/: query-072c3c0750a37b7121932c60f639570c196a35424357fad08d4cc47157133ee5.json  query-3a4405e1f4c504de9850afd9bbfbbbed76c3a5aee345ed5edbac484a8acae470.json  query-b2a6a578ffc37cb0738e7ffdecda80ae57e43cb1a1f1d099838706b47c87e7c7.json
config/: Cargo.toml  app.toml
config/environments/: development.toml  production.toml  staging.toml  test.toml
config/src/: lib.rs
db/: Cargo.toml  nohead_rs.db-shm  penrith-physio-dashboard.db-shm
db/migrations/: 20250205003803_create_todos_table.sql  20250212205449_create_users_table.sql  20250212205453_create_sessions_table.sql  20250302232936_create_worker_jobs_table.sql
db/src/: lib.rs
db/src/entities/: mod.rs  register_token.rs  session.rs  todo.rs  user.rs
mailer/: Cargo.toml
mailer/src/: auth.rs  emails.rs  lib.rs
web/: Cargo.toml  package-lock.json
web/src/: app.rs  error.rs  format.rs  jobs.rs  lib.rs  main.rs  router.rs  state.rs  tracing.rs  worker.rs
web/src/controllers/: home.rs  mod.rs  test.rs  todos.rs
web/src/controllers/auth/: login.rs  register.rs  register_confirm.rs
web/src/initializers/view_engine/: engine.rs  error.rs  initializer.rs  mod.rs
web/src/initializers/view_engine/plugins/: components.rs
web/src/middlewares/: auth.rs  flash.rs
web/src/test_helpers/: mod.rs
web/src/views/: home.rs  mod.rs  test.rs  todos.rs
web/src/views/auth/: login.rs  register.rs  register_confirm.rs
web/static/: 404.html
web/static/css/: output.css
web/styles/: input.css
web/styles/global/: global.css
web/templates/: base.html  index.html  test.html
web/templates/auth/login/: index.html
web/templates/auth/register/: index.html
web/templates/auth/register_confirm/: index.html
web/templates/todos/: index.html  show.html  update.html
web/tests/e2e/: login_test.rs  main.rs  todos_test.rs
web/tests/e2e/fixtures/: todos.sql
web/tests/integration/: main.rs  todos_test.rs
worker/: Cargo.toml
worker/src/: jobs.rs  lib.rs
