[package]
name = "nohead-rs_web"
version = "0.1.0"
edition = "2024"

[dependencies]
nohead-rs_config = { path = "../config" }

axum = { version = "0.8.1", features = ["tracing"] }
color-eyre = "0.6.3"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
