[package]
name = "nohead-rs_web"
version = "0.1.0"
edition = "2024"

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:axum-test"]

[dependencies]
nohead-rs_config = { path = "../config" }
nohead-rs_db = { path = "../db" }

rinja = { version = "0.3.5", features = ["with-axum"] }
axum = { version = "0.7.9", features = ["tracing", "macros"] }
axum-test = { version = "16.3.0", optional = true }
color-eyre = "0.6.3"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
thiserror = "2.0.11"
rinja_axum = "0.3.5"
axum-flash = "0.8.0"

[dev-dependencies]
nohead-rs_db = { path = "../db", features = ['test-helpers'] }
nohead-rs_web = { path = ".", features = ["test-helpers"] }
fake = { version = "3.1.0", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
] }
