[package]
name = "nohead-rs_web"
version = "0.1.0"
edition = "2024"

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[dependencies]
nohead-rs_config = { path = "../config" }
nohead-rs_db = { path = "../db" }

rinja = "0.3.5"
axum = { version = "0.8.1", features = ["tracing", "macros"] }
color-eyre = "0.6.3"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = "0.2.1"
thiserror = "2.0.11"
async-trait = "0.1.86"
axum-extra = { version = "0.10.0", features = ["cookie", "cookie-signed"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[dev-dependencies]
nohead-rs_db = { path = "../db", features = ['test-helpers'] }
axum-test = "17.2.0"
fake = { version = "3.1.0", features = ["derive"] }
http-body-util = "0.1.2"
sqlx = { version = "0.8.3", default-features = false, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "chrono",
  "migrate",
] }
